samples/_failures_safe/1761187152_58d7bb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a9076d2.c: In function ‘main’:
./samples/SAFE/__tmp_9a9076d2.c:149:13: error: expected ‘;’ at end of input
  149 |     return 0
      |             ^
      |             ;
./samples/SAFE/__tmp_9a9076d2.c:149:5: error: expected declaration or statement at end of input
  149 |     return 0
      |     ^~~~~~
